--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "bindings/rust/lib.rs"
 
 [dependencies]
 tree-sitter = "~0.25.0"
+tree-sitter-language = "~0.1.0"
 
 [build-dependencies]
 cc = "1.0"
